--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
     }
         getImgurImages();
         // call getImgurImages function every 30 minutes
-        setInterval(getImgurImages, 1800000);
+	// somewhen i will recode this
+        // setInterval(getImgurImages, 1800000);
     </script>
 </body>
